# rfid_app_tauri

./: .gitignore  README.md  index.html  lib.rs.backup  package-lock.json  package.json  rfid-app.keystore
src/: App.jsx  DoorControlDashboard.css  DoorControlDashboard.jsx  DoorSimulation.css  DoorSimulation.jsx  InventoryDashboard.css  InventoryDashboard.jsx  RfidSimulation.css  RfidSimulation.jsx  RfidTest.jsx  login.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
