[package]
name = "rfid-app-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "rfid_app_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["rustls-tls"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "net", "time", "rt"] }
tiberius = "0.12.3"
tokio-util = { version = "0.7", features = ["compat"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dotenvy = "0.15"
anyhow = "1"
md5 = "0.7"
hex = "0.4"
# chrono no es necesario, lo eliminamos