[package]
name = "rfid-app-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "rfid_app_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
md5 = "0.7"
hex = "0.4"
futures = "0.3"

[target.'cfg(not(target_os = "android"))'.dependencies]
tiberius = { version = "0.12", default-features = false, features = ["native-tls", "chrono", "tds73"] }

[target.'cfg(target_os = "android")'.dependencies]
tiberius = { version = "0.12", default-features = false, features = ["rustls", "chrono", "tds73"] }
